src/test/ui/feature-gate-concat_idents2.stderr
error[E0658]: `concat_idents` is not stable enough for use and is subject to change (see issue #29599)
  --> $DIR/feature-gate-concat_idents2.rs:14:5
   |
LL |     concat_idents!(a, b); //~ ERROR `concat_idents` is not stable enough
   |     ^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add #![feature(concat_idents)] to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
